--- a/Frontend/Mobile/app.json
+++ b/Frontend/Mobile/app.json
@@ -1,12 +1,11 @@
 {
   "expo": {
     "name": "Mobile",
-    "scheme":"Shareef",
+    "scheme": "myapp",
     "slug": "Mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
@@ -28,7 +27,8 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
