--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -18,14 +18,15 @@
     "@expo/vector-icons": "^14.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-google-signin/google-signin": "^8.2.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "^51.0.35",
+    "expo": "^45.0.8",
     "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
+    "expo-router": "^3.1.0",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -42,7 +43,8 @@
     "react-native-smart-statusbar": "^1.0.24",
     "react-native-svg": "^15.7.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-build-properties": "~0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
