--- a/Frontend/Mobile/tsconfig.json
+++ b/Frontend/Mobile/tsconfig.json
@@ -7,12 +7,14 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "types": ["node"]
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "images.d.ts",
   ]
 }
