--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and SonarQube Analysis
+name: Build
 
 on:
   push:
@@ -7,48 +7,36 @@ on:
 
 jobs:
   build:
-    name: Build and Analyze
+    name: Build and analyze
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for better relevancy of analysis
-
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      
       # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'  # Specify the Node.js version you want
+          node-version: '16'  # Specify your desired Node.js version
 
-      # Verify Node.js and npm installation
-      - name: Verify Node.js and npm installation
-        run: |
-          node -v
-          npm -v
-
-      # List files in Mobile directory for debugging
-      - name: List files in Mobile directory
-        run: ls -R Frontend/Mobile
-
-      # Install project dependencies
+      # Install dependencies
       - name: Install dependencies
         run: npm install
-        working-directory: Frontend/Mobile  # Set working directory to Mobile
+        working-directory: Frontend/Mobile
 
       # Run SonarQube scan
       - name: SonarQube Scan
         run: npm run sonar-scanner
-        working-directory: Frontend/Mobile  # Set working directory to Mobile
+        working-directory: Frontend/Mobile
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-      # If you wish to fail the job when the Quality Gate is red, uncomment the
-      # following lines. This is typically used to fail a deployment.
-      # - name: SonarQube Quality Gate
-      #   uses: sonarsource/sonarqube-quality-gate-action@master
+      # Uncomment the following lines if you want to fail your job when the Quality Gate is red
+      # - name: SonarQube Quality Gate Check
+      #   uses: sonarsource/sonarqube-quality-gate-action@v2
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
