--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       # Step 1: Checkout the repository
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for better analysis
 
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.17.0'  # Change this to another version if necessary
+          node-version: '16'  # Change this to another version if necessary
 
       # Step 3: Verify Node.js installation
       - name: Verify Node.js version
@@ -33,14 +33,9 @@ jobs:
       # Step 4: Install dependencies (ensure the directory is correct)
       - name: Install dependencies
         run: npm install
-        working-directory: ./Frontend/Mobile/  # Ensure this is the correct path to the package.json
+        working-directory: Frontend/Mobile  # Ensure this is the correct path to the package.json
 
-      # Step 5: Run tests (optional, add this if you have test scripts)
-      - name: Run tests
-        run: npm test
-        working-directory: Frontend/Mobile
-
-      # Step 6: Run SonarQube scan (ensure the secrets are properly set in GitHub repository settings)
+      # Step 5: Run SonarQube scan (ensure the secrets are properly set in GitHub repository settings)
       - name: SonarQube Scan
         run: npm run sonar-scanner
         working-directory: Frontend/Mobile
@@ -48,14 +43,14 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-      # Step 7: Optional - Quality Gate Check (uncomment if needed)
+      # Step 6: Optional - Quality Gate Check (uncomment if needed)
       # - name: SonarQube Quality Gate Check
       #   uses: sonarsource/sonarqube-quality-gate-action@v2
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      # Step 8: Upload test results or artifacts (optional)
+      # Step 7: Upload test results or artifacts (optional)
       # Uncomment and modify if you'd like to upload artifacts
       # - name: Upload artifacts
       #   uses: actions/upload-artifact@v3
