--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "sonar-scanner": "node ./node_modules/sonarqube-scanner/bin/sonar-scanner"
   },
   "jest": {
     "preset": "jest-expo"
@@ -60,6 +61,8 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
+    "sonar-scanner": "^3.1.0",
+    "sonarqube-scanner": "^4.2.3",
     "typescript": "~5.3.3"
   },
   "private": true
