--- a/Frontend/Mobile/sonar-project.properties
+++ b/Frontend/Mobile/sonar-project.properties
@@ -1,1 +1,9 @@
-sonar-scanner.bat -D"sonar.projectKey=Career" -D"sonar.sources=." -D"sonar.host.url=http://localhost:9000" -D"sonar.token=sqp_afbda2201639a578421e3cd2377eb5d66bad6f60
+sonar.projectKey=Career
+sonar.sources=.
+sonar.host.url=http://localhost:9000
+sonar.login=sqp_afbda2201639a578421e3cd2377eb5d66bad6f60
+sonar.exclusions=.github/**, .vscode/**, android/**, assets/**, build/**, ios/**, node_modules/**, scripts/**
+sonar.projectName=Career
+sonar.projectVersion=1.0
+sonar.login=admin
+sonar.password=AyhamAdmin8785@
