--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -47,9 +47,11 @@
     "react-native-screens": "3.31.1",
     "react-native-smart-statusbar": "^1.0.24",
     "react-native-svg": "^15.7.1",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "react-social-icons": "^6.18.0"
+    "react-social-icons": "^6.18.0",
+    "react-native-pager-view": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
