--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,21 +12,27 @@
     "license": "",
     "dependencies": {
         "@sendgrid/mail": "^7.7.0",
+        "axois": "^0.0.1-security",
         "bcryptjs": "^2.4.3",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.2",
+        "body-parser": "^1.20.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "env": "^0.0.2",
+        "express": "^4.21.1",
         "express-rate-limit": "^6.8.0",
         "joi": "^17.9.2",
-        "jsonwebtoken": "^9.0.1",
-        "mongoose": "^7.3.3",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.8.2",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.3",
         "nodemailer-sendinblue-transport": "^2.0.1",
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
         "sharp": "^0.32.2",
         "validator": "^13.9.0"
     },
     "devDependencies": {
         "jest": "^29.6.1",
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.1.7"
     }
 }
