--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -16,25 +16,25 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.3",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "expo": "^51.0.37",
+    "expo": "~51.0.38",
     "expo-asset": "~10.0.10",
     "expo-build-properties": "~0.12.5",
     "expo-config-plugins": "^0.1.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
-    "expo-router": "^3.1.0",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -49,21 +49,24 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-smart-statusbar": "^1.0.24",
-    "react-native-svg": "^15.7.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "15.2.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-social-icons": "^6.18.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.7",
+    "@babel/core": "^7.24.0",
     "@types/babel__core": "^7.20.5",
     "@types/babel-generator": "^6.25.8",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest": "^29.4.0",
+    "jest-expo": "^51.0.0",
     "react-test-renderer": "18.2.0",
     "sonar-scanner": "^3.1.0",
     "sonarqube-scanner": "^4.2.3",
