--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -26,7 +26,6 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "expo": "~51.0.38",
     "expo-asset": "~10.0.10",
     "expo-build-properties": "~0.12.5",
     "expo-config-plugins": "^0.1.2",
@@ -65,6 +64,7 @@
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
+    "expo": "^51.0.38",
     "jest": "^29.4.0",
     "jest-expo": "^51.0.0",
     "react-test-renderer": "18.2.0",
