--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -46,6 +46,7 @@
     "react-native": "0.74.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-device-info": "^13.0.0",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
