--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -44,6 +44,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-device-info": "^13.0.0",
     "react-native-element-dropdown": "^2.12.2",
