Working in Chat System

--- a/Frontend/Mobile/app.json
+++ b/Frontend/Mobile/app.json
@@ -30,6 +30,12 @@
       "expo-font",
       "expo-asset",
       [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ],
+      [
         "@react-native-google-signin/google-signin",
         {
           "iosUrlScheme": "com.googleusercontent.apps.155720957457-buoh0r927fjprq0j9pf9cckbof2gu2g2"
