--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,7 +29,8 @@
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
         "sharp": "^0.32.6",
-        "validator": "^13.9.0"
+        "validator": "^13.9.0",
+        "ws": "^8.18.0"
     },
     "devDependencies": {
         "jest": "^29.6.1",
