--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -34,6 +34,7 @@
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-modules-core": "~1.12.26",
     "expo-router": "~3.5.23",
@@ -62,7 +63,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-social-icons": "^6.18.0",
-    "expo-image-picker": "~15.0.7"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
