--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -60,6 +60,7 @@
     "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-social-icons": "^6.18.0",
