--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -28,6 +28,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@types/axios": "^0.9.36",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "expo-asset": "~10.0.10",
     "expo-auth-session": "~5.5.2",
     "expo-build-properties": "~0.12.5",
@@ -48,6 +49,8 @@
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-calendar-picker": "^8.0.5",
+    "react-native-calendarview-datepicker": "^0.0.12",
     "react-native-device-info": "^13.0.0",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-emoji-selector": "^0.2.0",
@@ -74,6 +77,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-test-renderer": "^18.0.7",
     "expo": "^51.0.38",
     "jest": "^29.4.0",
