--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -39,8 +39,8 @@
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-modules-core": "~1.12.26",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.6",
+    "expo-router": "~3.5.24",
+    "expo-splash-screen": "^0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -79,7 +79,7 @@
     "@types/react-native": "^0.73.0",
     "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-test-renderer": "^18.0.7",
-    "expo": "^51.0.38",
+    "expo": "~51.0.39",
     "jest": "^29.4.0",
     "jest-expo": "^51.0.0",
     "react-test-renderer": "18.2.0",
