--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -20,7 +20,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -29,24 +29,24 @@
     "@types/axios": "^0.9.36",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
-    "expo-asset": "~10.0.10",
-    "expo-auth-session": "~5.5.2",
-    "expo-build-properties": "~0.12.5",
+    "expo-asset": "~11.0.1",
+    "expo-auth-session": "~6.0.0",
+    "expo-build-properties": "~0.13.1",
     "expo-config-plugins": "^0.1.2",
-    "expo-constants": "~16.0.2",
-    "expo-crypto": "~13.0.2",
-    "expo-font": "~12.0.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-modules-core": "~1.12.26",
-    "expo-router": "~3.5.24",
-    "expo-splash-screen": "^0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.1",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.2",
+    "expo-linking": "~7.0.2",
+    "expo-modules-core": "~2.0.3",
+    "expo-router": "~4.0.6",
+    "expo-splash-screen": "~0.29.11",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.3",
+    "expo-web-browser": "~14.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-animatable": "^1.4.0",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-calendar-picker": "^8.0.5",
@@ -54,14 +54,14 @@
     "react-native-device-info": "^13.0.0",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-emoji-selector": "^0.2.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.4.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-smart-statusbar": "^1.0.24",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "15.8.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.1",
@@ -79,7 +79,7 @@
     "@types/react-native": "^0.73.0",
     "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-test-renderer": "^18.0.7",
-    "expo": "~51.0.39",
+    "expo": "^52.0.7",
     "jest": "^29.4.0",
     "jest-expo": "^51.0.0",
     "react-test-renderer": "18.2.0",
