--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -22,9 +22,10 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-navigation/drawer": "^6.7.2",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/drawer": "^7.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^6.4.1",
     "@types/axios": "^0.9.36",
     "axios": "^1.7.7",
@@ -38,7 +39,6 @@
     "expo-font": "~13.0.1",
     "expo-image-picker": "~16.0.2",
     "expo-linking": "~7.0.2",
-    "expo-modules-core": "~2.0.3",
     "expo-router": "~4.0.6",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
@@ -58,7 +58,7 @@
     "react-native-pager-view": "6.4.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "^4.0.0",
     "react-native-smart-statusbar": "^1.0.24",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.8.0",
@@ -68,7 +68,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-social-icons": "^6.18.0",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "@expo/config-plugins": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -76,12 +77,11 @@
     "@types/babel-generator": "^6.25.8",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
     "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-test-renderer": "^18.0.7",
     "expo": "^52.0.7",
     "jest": "^29.4.0",
-    "jest-expo": "^52.0.2",
+    "jest-expo": "~52.0.2",
     "react-test-renderer": "18.2.0",
     "sonar-scanner": "^3.1.0",
     "sonarqube-scanner": "^4.2.3",
