--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -40,9 +40,9 @@
     "expo-crypto": "~14.0.1",
     "expo-font": "~13.0.1",
     "expo-image-picker": "~16.0.2",
-    "expo-linking": "~7.0.2",
-    "expo-location": "~18.0.1",
-    "expo-router": "~4.0.6",
+    "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.2",
+    "expo-router": "~4.0.7",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
@@ -60,11 +60,11 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.18.0",
-    "react-native-pager-view": "6.4.1",
+    "react-native-pager-view": "6.5.1",
     "react-native-permissions": "^5.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-smart-statusbar": "^1.0.24",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.8.0",
