--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -20,7 +20,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@fortawesome/fontawesome-svg-core": "^6.7.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-async-storage/async-storage": "2.1.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^7.0.6",
@@ -57,16 +57,16 @@
     "react-native-element-dropdown": "^2.12.2",
     "react-native-emoji-selector": "^0.2.0",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "~2.21.2",
-    "react-native-maps": "^1.20.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.18.0",
     "react-native-pager-view": "6.5.1",
     "react-native-permissions": "^5.1.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.14.0",
-    "react-native-screens": "~4.2.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-smart-statusbar": "^1.0.24",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "15.9.0",
+    "react-native-svg": "^15.8.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^4.0.2",
     "react-native-toast-message": "^2.2.1",
