--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -29,7 +29,10 @@
     "@react-navigation/native-stack": "^7.1.0",
     "@react-navigation/stack": "^7.0.0",
     "@types/axios": "^0.14.4",
+    "@types/react-native-dotenv": "^0.2.2",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo-asset": "~11.0.1",
     "expo-auth-session": "~6.0.0",
@@ -37,6 +40,7 @@
     "expo-config-plugins": "^0.1.2",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
+    "expo-document-picker": "~13.0.1",
     "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
     "expo-image-picker": "~16.0.2",
@@ -57,8 +61,11 @@
     "react-native-calendar-picker": "^8.0.5",
     "react-native-calendarview-datepicker": "^0.0.12",
     "react-native-device-info": "^14.0.0",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-emoji-selector": "^0.2.0",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
@@ -74,9 +81,11 @@
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^4.0.2",
     "react-native-toast-message": "^2.2.1",
+    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-social-icons": "^6.18.0",
+    "uuid": "^11.0.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
