Add your post to the list

--- a/Frontend/Web/src/.env
+++ b/Frontend/Web/src/.env
@@ -1,1 +1,1 @@
-VITE_API = "mongodb+srv://s12029113:32IDCCrtQWBYjl5I@careercluster.4i5lz.mongodb.net/"
+db = "mongodb+srv://s12029113:32IDCCrtQWBYjl5I@careercluster.4i5lz.mongodb.net/"
