Implement Sign in with google

--- a/Frontend/Mobile/package.json
+++ b/Frontend/Mobile/package.json
@@ -16,6 +16,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.6.6",
+    "@clerk/types": "^4.40.0",
     "@expo/config-plugins": "~9.0.9",
     "@expo/vector-icons": "^14.0.4",
     "@fortawesome/fontawesome-svg-core": "^6.7.0",
@@ -45,11 +47,13 @@
     "expo-document-picker": "~13.0.1",
     "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.2",
+    "expo-image-manipulator": "~13.0.5",
     "expo-image-picker": "~16.0.2",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.2",
     "expo-router": "~4.0.7",
+    "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "0.29.12",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
@@ -92,8 +96,7 @@
     "react-native-web": "~0.19.13",
     "react-social-icons": "^6.18.0",
     "uuid": "^11.0.3",
-    "ws": "^8.18.0",
-    "expo-image-manipulator": "~13.0.5"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
