Edit Secret Keys

--- a/Frontend/Web/.env
+++ b/Frontend/Web/.env
@@ -3,6 +3,7 @@ VITE_API=http://localhost:7777/api
 VITE_MAP_KEY = AIzaSyDdDsyQ3mxGGix5HiKOphWo1b4RW-Nxqis
 VITE_AWS_ID = AKIA5MSUBQC3OE6ZOF4Z
 VITE_AWS_KEY = bY/3xeaaOQgC9Kbxh47fWL4YT4WMV4FOiIj61qIa
+VITE_S3_URL = https://career-images-s3.s3.eu-north-1.amazonaws.com
 
 Access key ID,Secret access key
 AKIA5MSUBQC3OE6ZOF4Z,bY/3xeaaOQgC9Kbxh47fWL4YT4WMV4FOiIj61qIa
